--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angularjs-seed",
-  "description": "A starter project for AngularJS",
-  "repository": "https://github.com/angular/angular-seed",
+  "name": "ct-watch-www",
+  "description": "HTML/JS for ct-watch",
+  "repository": "https://github.com/tomfitzhenry/ct-watch-www",
   "devDependencies": {
     "phantomjs" : "~1.9",
     "karma" : "~0.10",
