--- a/ct-watch-www.service
+++ b/ct-watch-www.service
@@ -4,7 +4,7 @@ Requires=docker.service
 After=docker.service
 
 [Service]
-Restart=on-failure
+Restart=always
 RestartSec=10
 ExecStartPre=-/usr/bin/docker rm service-ct-watch-www
 ExecStart=/usr/bin/docker run -p 8081:80 --name=service-ct-watch-www ct-watch-www
