--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ node_js:
 script:
 - docker build -t certificate-transparency-watch-docker-ct-watch-registry.bintray.io/ct-watch-www .
   
-deploy:
+before_deploy:
 - docker login -u tomfitzhenry -p $BINTRAY_API_KEY -e tom@tom-fitzhenry.me.uk certificate-transparency-watch-docker-ct-watch-registry.bintray.io
+
+deploy:
 - docker push certificate-transparency-watch-docker-ct-watch-registry.bintray.io/ct-watch-www
 
 env:
